[tool.poetry]
name = "llm-mcp-client"
version = "0.1.1"
authors = [
    "Cheng Chen",
]
description = "send email to your email address"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
readme = "README.md"
packages = [{ include = "llm_mcp_client" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
python-dotenv = "*"
fastmcp = "*"

[tool.poetry.scripts]
llm-mcp-client = "llm_mcp_client.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
