[tool.poetry]
name = "llm-memory"
version = "0.1.1"
authors = [
    "Cheng Chen",
]
description = "A simple llm-memory template"
license = "MIT License"
homepage = "https://github.com/moxin-org/mofa"
documentation = "https://github.com/moxin-org/mofa/blob/main/README.md"
readme = "README.md"
packages = [{ include = "llm_memory" }]

[tool.poetry.dependencies]
pyarrow = ">= 5.0.0"
openai = "*"

[tool.poetry.scripts]
llm-memory = "llm_memory.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


